added buttons to the hero section, a scroll indicator and made some adjustment to the design

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,25 @@ body {
 
 
 /* #010103 - alt color for background */
+
+
+@keyframes scroll {
+  0% {
+    opacity: 1;
+    transform: translateY(5px);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(20px);  
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+
+@layer utilities {
+  .animate-scroll {
+    animation: scroll 2s ease-in-out infinite;
+  }
+}
