Finished the hero section, made some adjustment on the overall project and started working on the about section with a bento-grid

--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  scroll-behavior: smooth;
-}
 
+/* #010103 - #3f5042- alt color for background */
 body {
-  background: #031510;
+  background: #040a06;
   font-family: 'General Sans', sans-serif;
 }
 
@@ -18,9 +16,30 @@ body {
   @apply bg-gradient-to-r from-[#BEC1CF] from-60% via-[#D5D8EA] via-60% to-[#D5D8EA] to-100% bg-clip-text text-transparent;
 }
 
+.grid-container {
+    @apply w-full h-full border border-black-300 bg-black-200 rounded-lg sm:p-7 p-4 flex flex-col gap-5;
+  }
+
+.grid-header_text{
+  @apply text-xl font-semibold mb-2 text-white font-generalSans;
+}
+.grid-secondary_text{
+  @apply text-[#afb0b6] text-base font-generalSans;
+}
 
 
-/* #010103 - alt color for background */
+.btn {
+  @apply flex gap-4 items-center justify-center cursor-pointer p-3 rounded-md bg-black-300  transition-all active:scale-95 text-white mx-auto;
+}
+
+.btn-ping {
+  @apply animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75;
+}
+
+.btn-ping_dot {
+  @apply relative inline-flex rounded-full h-3 w-3 bg-green-500;
+}
+
 
 
 @keyframes scroll {
